Atualizar o README.md

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,9 @@ springdoc.swagger-ui.operationsSorter=method
 
 
 # http://localhost:8080/api-docs
+
+## Download yaml
 # http://localhost:8080/api-docs.yaml
+
+# Ver o arquivo
 # http://localhost:8080/swagger-ui.html
